// Vitest Snapshot v1

exports[`Selection List > Multi Selection List testing > Multi Selection Snapshot > Multi Selection List Container Snapshot 1`] = `
<div>
  <div
    class="HvSelectionList-root css-1gf6ci5-StyledFormElement e1l81ih64 HvFormElement-root"
    id="main"
  >
    <label
      class="HvSelectionList-label e1l81ih63 HvLabel-root e17iqvr40 HvTypography-root HvTypography-label css-39tyaj-getStyledComponent-StyledTypography-StyledLabel e1tnpalo0"
      id="main-label"
    >
      Choose your favorite items
    </label>
    <ul
      aria-labelledby="main-label"
      aria-multiselectable="true"
      class="HvSelectionList-listbox HvSelectionList-vertical css-74c2lo-StyledListContainer e1l81ih60 HvListContainer-root"
      id="main-listbox"
      role="listbox"
    >
      <li
        aria-selected="false"
        class="HvListItem-root HvListItem-gutters HvListItem-condensed HvListItem-interactive HvFocus-root HvFocus-focusDisabled css-141qw1r-StyledListItem e1palmq41"
        role="option"
        tabindex="-1"
        value="1"
      >
        ListItem 1
      </li>
      <li
        aria-selected="true"
        class="HvListItem-root HvListItem-gutters HvListItem-condensed HvListItem-interactive HvListItem-selected HvFocus-root HvFocus-selected HvFocus-focusDisabled css-1jb3wq5-StyledListItem e1palmq41"
        role="option"
        tabindex="0"
        value="2"
      >
        ListItem 2
      </li>
      <li
        aria-selected="false"
        class="HvListItem-root HvListItem-gutters HvListItem-condensed HvListItem-interactive HvFocus-root HvFocus-focusDisabled css-141qw1r-StyledListItem e1palmq41"
        role="option"
        tabindex="-1"
        value="3"
      >
        ListItem 3
      </li>
      <li
        aria-selected="false"
        class="HvListItem-root HvListItem-gutters HvListItem-condensed HvListItem-interactive HvFocus-root HvFocus-focusDisabled css-141qw1r-StyledListItem e1palmq41"
        role="option"
        tabindex="-1"
        value="4"
      >
        ListItem 4
      </li>
      <li
        aria-selected="false"
        class="HvListItem-root HvListItem-gutters HvListItem-condensed HvListItem-interactive HvFocus-root HvFocus-focusDisabled css-141qw1r-StyledListItem e1palmq41"
        role="option"
        tabindex="-1"
        value="5"
      >
        ListItem 5
      </li>
      <li
        aria-selected="false"
        class="HvListItem-root HvListItem-gutters HvListItem-condensed HvListItem-interactive HvFocus-root HvFocus-focusDisabled css-141qw1r-StyledListItem e1palmq41"
        role="option"
        tabindex="-1"
        value="6"
      >
        ListItem 6
      </li>
    </ul>
  </div>
</div>
`;

exports[`Selection List > Single Selection List testing > Selection List Snapshot testing > Selection List Container 1`] = `
<div>
  <div
    class="HvSelectionList-root css-1gf6ci5-StyledFormElement e1l81ih64 HvFormElement-root"
  >
    <ul
      class="HvSelectionList-listbox HvSelectionList-vertical css-74c2lo-StyledListContainer e1l81ih60 HvListContainer-root"
      id=""
      role="listbox"
    >
      <li
        aria-selected="false"
        class="HvListItem-root HvListItem-gutters HvListItem-condensed HvListItem-interactive HvFocus-root HvFocus-focusDisabled css-141qw1r-StyledListItem e1palmq41"
        role="option"
        tabindex="-1"
        value="1"
      >
        ListItem 1
      </li>
      <li
        aria-selected="true"
        class="HvListItem-root HvListItem-gutters HvListItem-condensed HvListItem-interactive HvListItem-selected HvFocus-root HvFocus-selected HvFocus-focusDisabled css-1jb3wq5-StyledListItem e1palmq41"
        role="option"
        tabindex="0"
        value="2"
      >
        ListItem 2
      </li>
      <li
        aria-selected="false"
        class="HvListItem-root HvListItem-gutters HvListItem-condensed HvListItem-interactive HvFocus-root HvFocus-focusDisabled css-141qw1r-StyledListItem e1palmq41"
        role="option"
        tabindex="-1"
        value="3"
      >
        ListItem 3
      </li>
    </ul>
  </div>
</div>
`;
